--- a/SwaggerTutorial/SwaggerTutorial.API/Properties/launchSettings.json
+++ b/SwaggerTutorial/SwaggerTutorial.API/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "swagger/index.html",
+      "launchUrl": "api-docs",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
